fix the off-alignment of the sign in page. Fix the user partial jbuilder file to show the users questions and answers

--- a/app/assets/stylesheets/components/menu/menu.scss
+++ b/app/assets/stylesheets/components/menu/menu.scss
@@ -1,9 +1,10 @@
 .menu {
-    flex: 1 1 0; 
+    // flex: 1 1 0; 
     border-right: 1px dotted $focus-gray;  
     padding: 0.5rem; 
-    display: flex; 
     flex-direction: column; 
+    display: flex; 
+    flex: 0 0 185px; 
 }
 // .menu-home {
 //     padding-top: 2rem; 
